WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178018
RootInlineBox should not hold a raw pointer to RenderObject
https://bugs.webkit.org/show_bug.cgi?id=178018
Summary
RootInlineBox should not hold a raw pointer to RenderObject
alan
Reported
2017-10-06 10:45:38 PDT
m_lineBreakObj
Attachments
Patch
(2.94 KB, patch)
2017-10-06 10:49 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-10-06 10:48:52 PDT
<
rdar://problem/34859256
>
alan
Comment 2
2017-10-06 10:49:51 PDT
Created
attachment 323027
[details]
Patch
WebKit Commit Bot
Comment 3
2017-10-06 11:47:51 PDT
Comment on
attachment 323027
[details]
Patch Clearing flags on attachment: 323027 Committed
r222990
: <
http://trac.webkit.org/changeset/222990
>
WebKit Commit Bot
Comment 4
2017-10-06 11:47:52 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug