RootInlineBox should not hold a raw pointer to RenderObject https://bugs.webkit.org/show_bug.cgi?id=178018 <rdar://problem/34859256>

Reviewed by Simon Fraser.

Not resetting the line break object could lead to dereferencing a stale renderer.

Covered by existing tests.

* rendering/RootInlineBox.cpp:
(WebCore::RootInlineBox::RootInlineBox):
(WebCore::RootInlineBox::setLineBreakInfo):
* rendering/RootInlineBox.h:
(WebCore::RootInlineBox::lineBreakObj const):


Canonical link: https://commits.webkit.org/194262@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222990 268f45cc-cd09-0410-ab3c-d52691b4dbfc